
   - added logging script (utils/logger.py) to log config files after training
   -- added this script to 'run.sh' such that it runs automatically after training

   - added save_fpath argument to all models such that weights can be saved to a loaded from more from more flexible locations


   lstm (05/27/2025)
   - changed rnn architecture from having a separate output layer to having the output transformation responsibilities (ie why, bhy, and the output activation) be attached to the final hidden layer
   -- this is an intentional design choice (i think it makes sense to have the output transformation as part of the final hidden layer)
   -- i believe that this architecture makes sense for the lstm, which is why i changed the rnn architecture to match

   - improved utils/logger.py such that data/plotTrainingResults logs the training loss curves (in addition to the config file) via a 'log_id' that is automatically generated (via datetime) and added to the config file
   -- also added functionality to data/plotRegressionResults.py that saves the first 5 regression result plots to the new log directory as well

   - changed "if self.is_conv_layer:" in the cnn class to "if self.type == 'convolutional':" to match the conventions of other architectures

   - fixed really dumb rnn bug whereby the state was being reset after each epoch, even if self.stateful=True
   -- this was caused by me placing the call to self.generateState() INSIDE the 'forward()' call instead of outside of it
   -- thus, the state attribute (self.ht1) would be re-initialized back to zeros after each epoch instead of being carried over to the next epoch
   -- this was fixed by adding a flag called 'self.stateful_initialized' that is set to True after the first call to self.generateState() (which is guarded by an if statement: 'if self.stateful and not self.stateful_initialized:' )
